--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }, 1000); // 延迟1秒以确保控件已加载
       }
     </script>
-    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script async defer src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     
     <!-- Microsoft Translator样式优化 -->
     <style>
@@ -311,7 +311,7 @@
         );
       }
     </script>
-    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script async defer src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     
     <!-- 语言切换功能已集成到React组件中 -->
   </body>
