--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tkgogogo.com - 专业TikTok(抖音)代播平台</title>
+    <title>tkbubu.com - 专业TikTok(抖音)代播平台</title>
     <meta name="description" content="专业的TikTok代播平台，连接优质品牌与专业主播，提供高效的直播带货解决方案" />
     <!-- 自定义样式 -->
     <style>
