--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="referrer" content="strict-origin-when-cross-origin" />
-    <title>Tkbubu - 专业TikTok(抖音)代播平台</title>
-    <meta name="description" content="专业的TikTok代播平台，连接优质品牌与专业主播，提供高效的直播带货解决方案" />
+    <title>Tkbubu - Professional TikTok Live Streaming Agency Platform</title>
+    <meta name="description" content="Professional TikTok live streaming agency platform, connecting premium brands with professional streamers, providing efficient live commerce solutions." />
     <!-- 页面可见性API和状态恢复脚本 -->
     <script>
       // 页面可见性变化处理
